css/style.css
body {
    background-color: #252525;
    color: #fcfcfc;
    font-family: Montserrat, sans-serif;
    margin-top: 5em;
    text-align: center;
}

h1 {
    margin-bottom: 0.3em;
}

h2 {
    font-size: 1rem;
    font-weight: normal;
    margin: 0;
    padding: 0;
}

strong {
    font-weight: 300;
    font-size: 1.2em;
}

.cat {
    margin-top: 4em;
    margin-bottom: 4em;
}

.part {
    padding-left: 0;
}

.part li {
    display: inline-block;
    position: relative;
    list-style-type: none;
    margin-left: 5px;
}


.part li, .part li a, .part li img {
    vertical-align: middle;
}

.part li img {
    max-width: 45px;
    max-height: 45px;
}

.small_cat li img {
    max-width: 35px;
    max-height: 35px;
    min-height: 35px;
}

.part li a {
    border-radius: 100%;
    display: table-cell;
    text-align: center;
    text-decoration: none;
    width: 55px;
}

.part li a:hover,
.part li a:focus {
    outline: none;
    opacity: 1;
}

.part li a:hover img,
.part li a:focus img {
    outline: none;
    opacity: 0.5;
}

.part li a:focus img, .part li a:hover img {
    outline: medium none;
}

.tooltip {
    display: block;
    position: absolute;
        bottom: -45px; right: -9px;
    padding: .25em .5em;
    background-color: #fcfcfc;
    border-radius: .2rem;
    color: #252525;
    opacity: 0;
    -webkit-transition: opacity .5s ease;
    -moz-transition: opacity .5s ease;
    -o-transition: opacity .5s ease;
    transition: opacity .5s ease;
    white-space: nowrap;
    pointer-events: none;
}

.tooltip::after {
    display: block;
    position: absolute;
        top: -5px; right: 32px;
    height: .6rem;
    width: .6rem;
    content: '';
    background: #fcfcfc;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
            transform: rotate(45deg);
}

.part li:nth-of-type(-n + 2) a .tooltip {
    left: -9px;
    right: auto;
}

.part li:nth-of-type(-n + 2) a .tooltip::after {
    left: 32px;
    right: auto;
}

@media all and (min-width: 480px) {
  .part li a:hover .tooltip {
      opacity: 1;
      z-index: 10;
  }

  .part li a:focus .tooltip {
      opacity: 0.7;
  }

  .part li a:hover img,
  .part li a:focus img {
      opacity: 0.7;
  }
}

